<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_informasi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hello.travellink.InformasiActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="INFORMASI WISATA"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="232dp"
            android:paddingTop="30dp"
            android:src="@drawable/tsm_galunggung"
            android:layout_weight="0.01" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:text="@string/galunggung"
            android:id="@+id/textView"
            android:layout_weight="0.01" />

        <ImageView
        android:layout_width="365dp"
        android:paddingTop="20dp"
        android:layout_marginTop="30dp"
        android:layout_height="269dp"
        android:src="@drawable/tsm_karangtaulan"
        android:layout_weight="0.01"
        android:id="@+id/imageView" />

        <TextView
            android:layout_width="wrap_content"
            android:paddingTop="0dp"
            android:layout_height="wrap_content"
            android:text="@string/karang_tawulan"
            android:layout_weight="0.01"
            android:id="@+id/textView2" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="269dp"
            android:paddingTop="30dp"
            android:layout_margin="0dp"
            android:src="@drawable/tsm_taraju"
            android:id="@+id/imageView2"
            android:layout_weight="0.01" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:text="@string/taraju"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="269dp"
            android:paddingTop="30dp"
            android:src="@drawable/bdg_lodge"
            android:layout_weight="0.01"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lodge"/>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="269dp"
            android:paddingTop="30dp"
            android:src="@drawable/bdg_kawah"
            android:id="@+id/imageView3"
            android:layout_weight="0.01"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kawah_putih"/>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="269dp"
            android:paddingTop="30dp"
            android:src="@drawable/bdg_tangkuban"
            android:layout_weight="0.01"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tangkuban_parahu"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="269dp"
            android:paddingTop="30dp"
            android:src="@drawable/bgr_kebunraya"
            android:layout_weight="0.01"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bogor1"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="269dp"
            android:paddingTop="30dp"
            android:src="@drawable/bgr_talaga"
            android:layout_weight="0.01"
            android:id="@+id/imageView4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bogor2"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="269dp"
            android:paddingTop="30dp"
            android:layout_weight="0.01"
            android:src="@drawable/bgr_safari"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bogor3"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="269dp"
            android:paddingTop="30dp"
            android:layout_weight="0.01"
            android:src="@drawable/crb_keraton"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crb1"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="269dp"
            android:layout_weight="0.01"
            android:paddingTop="30dp"
            android:src="@drawable/crb_sunyaragi"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crb2"/>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="269dp"
            android:layout_weight="0.01"
            android:paddingTop="30dp"
            android:src="@drawable/crb_waterland"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crb3"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
