<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hello.travellink.MenuActivity">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TRIP TO..."
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30dp" />

        <Button
            android:id="@+id/tasikmalaya"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="horizontal"
            android:layout_marginTop="16dp"
            android:padding="30dp"
            android:text="@string/btn1"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bandung"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="horizontal"
            android:padding="30dp"
            android:text="@string/btn2"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bogor"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="horizontal"
            android:padding="30dp"
            android:text="@string/btn3"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cirebon"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="horizontal"
            android:padding="30dp"
            android:text="@string/btn4"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>
